deployment-example/jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
  name: jenkins-ingress
  namespace: jenkins
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-ui
          servicePort: 8080
